docs: add java doc