@@ -5,9 +5,20 @@ import com.university.game.GameContext;
 
 import java.util.*;
 
-
+/**
+ * The {@code ShowMapCommand} class implements the {@code ICommand} interface
+ * and is responsible for displaying the map of the dungeon.
+ * The map will only show the rooms that the player has visited, marking their current position.
+ * Unvisited rooms will be represented as unexplored areas.
+ */
 public class ShowMapCommand implements ICommand {
 
+    /**
+     * Executes the command to display the map of the dungeon.
+     * The map shows the player's current room, visited rooms, and unexplored areas.
+     *
+     * @param context the current game context which contains the dungeon and player information.
+     */
     @Override
     public void execute(GameContext context) {
         System.out.println("* You have great memory! Here are the places you have visited:\n");
@@ -19,25 +30,33 @@ public class ShowMapCommand implements ICommand {
         displayMap(mapGrid);
     }
 
+    /**
+     * Generates the map grid for the dungeon, based on the player's visited rooms.
+     * Marks the current room, visited rooms, and unexplored rooms.
+     *
+     * @param rooms       a 2D list of rooms in the dungeon.
+     * @param currentRoom the room where the player is currently located.
+     * @return a 2D character array representing the map grid.
+     */
     private char[][] mapGrid(List<List<Room>> rooms, Room currentRoom) {
-        char[][] mapGrid = new char[rooms.size()][rooms.getFirst().size()];
+        char[][] mapGrid = new char[rooms.size()][rooms.get(0).size()];
 
         for (int row = 0; row < rooms.size(); row++) {
             for (int col = 0; col < rooms.get(row).size(); col++) {
                 Room room = rooms.get(row).get(col);
                 if (room.equals(currentRoom)) {
-                    mapGrid[row][col] = 'P';
+                    mapGrid[row][col] = 'P';  // Mark player's current room
                 }
                 else if (room.isEntrance() && room.isVisited()) {
-                    mapGrid[row][col] = 'E';
+                    mapGrid[row][col] = 'E';  // Mark entrance room if visited
                 }
                 else if (room.isExit() && room.isVisited()) {
-                    mapGrid[row][col] = 'X';
+                    mapGrid[row][col] = 'X';  // Mark exit room if visited
                 }
                 else if (room.isVisited()) {
-                    mapGrid[row][col] = '.';
+                    mapGrid[row][col] = '.';  // Mark visited rooms
                 } else {
-                    mapGrid[row][col] = '#';
+                    mapGrid[row][col] = '#';  // Mark unexplored rooms
                 }
             }
         }
@@ -45,6 +64,12 @@ public class ShowMapCommand implements ICommand {
         return mapGrid;
     }
 
+    /**
+     * Displays the generated map grid in a readable format.
+     * It shows the map with legends for the player, entrance, visited rooms, and unexplored areas.
+     *
+     * @param mapGrid the 2D character array representing the map grid.
+     */
     private void displayMap(char[][] mapGrid) {
         System.out.println("==============================");
         System.out.println("         Dungeon Map");
@@ -61,5 +86,4 @@ public class ShowMapCommand implements ICommand {
         System.out.println("Legend: P - You | E - Entrance | . - Route | # - Unexplored");
         System.out.println("==============================");
     }
-
 }
